# src/MainRouter.js
@@ -4,9 +4,9 @@ const swaggerUi = require('swagger-ui-express')
 const YAML = require('yamljs')
 
 module.exports = (fetch, config) => {
-  const RocketChatAdapter = require('./adapters/RocketChatAdapter')(fetch, config)
-  const WekanAdapter = require('./adapters/WekanAdapter')(fetch, config)
-  const CiviCRMAdapter = require('./adapters/CiviCRMAdapter')(fetch, config)
+  const {CiviCRMAdapter, WekanAdapter, RocketChatAdapter} = require('./adapters')(fetch, config)
+  const MailSender = require('./MailSender')(config)
+  const {registerContact, confirmRegistration} = require('./controller/ContactController')(CiviCRMAdapter, MailSender, config)
 
   function nocache(req, res, next) {
     res.header('Cache-Control', 'private, no-cache, no-store, must-revalidate')
@@ -25,11 +25,6 @@ module.exports = (fetch, config) => {
         next(error)
       }
     }
-  }
-
-  async function createContact(data) {
-    await CiviCRMAdapter.createContact(data)
-    return {httpStatus: 201}
   }
 
   async function createMember(data) {
@@ -58,7 +53,10 @@ module.exports = (fetch, config) => {
 
   router.use('/api-ui', swaggerUi.serve, swaggerUi.setup(oas3Document))
   router.get('/', (req, res) => res.redirect('api-ui'))
-  router.post('/contacts', nocache, jsonHandlerFor(req => createContact(req.body)))
+  
+  router.post('/contacts', nocache, jsonHandlerFor(req => registerContact(req.body)))
+  router.get('/contacts/:id/confirmations/:code', jsonHandlerFor(req => confirmRegistration(req.params.id, req.params.code)))
+
   router.post('/members', nocache, jsonHandlerFor(req => createMember(req.body)))
 
   return router
